fix: desktop time picker input alignment

--- a/digitransit-component/packages/digitransit-component-datetimepicker/src/helpers/styles.scss
+++ b/digitransit-component/packages/digitransit-component-datetimepicker/src/helpers/styles.scss
@@ -302,6 +302,7 @@ $zindex: base, map-container, map-gradient, map-fullscreen-toggle, map-buttons,
       background: inherit;
       position: relative;
       margin-left: 40px;
+      margin-top: -4px;
 
       input {
         opacity: 1 !important; // TODO
